--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,37 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Test DB{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            {{ encore_entry_link_tags('gemmacss.css') }}
         {% endblock %}
+        
 
+
+        {#
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        #}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="test-db.php" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap" />
+                </svg>
+                <span class="fs-4"><img src="./logo.svg" alt=""></span>
+        </header>
+    </div>
+
+        {% block body %}
+
+        {% endblock %}
     </body>
 </html>
